--- a/src/style.scss
+++ b/src/style.scss
@@ -2,3 +2,4 @@
 @import "../src/style/header/header.scss";
 @import "../src/style/productList/productList.scss";
 @import "../src/style/layeredNavigation/layeredNavigation.scss";
+@import "../src/style/productDetail/productDetail.scss";
