--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -19,3 +19,9 @@ h1 {
 .success-bg {
   background-color: rgba(10, 131, 26, 0.411);
 }
+
+.active {
+  background-color: green;
+  color: aliceblue;
+  border: 1px solid green;
+}
