--- a/src/style.scss
+++ b/src/style.scss
@@ -3,3 +3,5 @@
 @import "../src/style/productList/productList.scss";
 @import "../src/style/layeredNavigation/layeredNavigation.scss";
 @import "../src/style/productDetail/productDetail.scss";
+@import "../src/style/cart/cart.scss";
+@import "../src/style/cartCard/cartCard.scss";
