--- a/src/style/productCard/productCard.scss
+++ b/src/style/productCard/productCard.scss
@@ -1,5 +1,5 @@
 .product-card {
-  height: 350px;
+  height: 450px;
   width: 320px;
   padding: 20px 0px;
   // margin-right: 5px;
@@ -14,7 +14,7 @@
   &-image {
     height: 75%;
     width: 100%;
-    // object-fit: contain;
+
     img {
       height: 100%;
       width: 100%;
@@ -24,6 +24,7 @@
 
   &-content {
     margin-top: 5px;
+    padding-bottom: 20px;
     &-name {
       text-align: center;
       display: flex;
@@ -44,13 +45,24 @@
     &-price {
       text-align: center;
       padding-top: 1px;
+      padding-bottom: 10px;
       color: cadetblue;
-
       h4 {
         margin: 0px;
-        margin-top: 10px;
         font-size: 22px;
         font-weight: 400;
+      }
+    }
+
+    &-btn {
+      button {
+        margin: auto;
+        display: flex;
+        padding: 10px 10px;
+        background-color: grey;
+        border-radius: 5px;
+        border: none;
+        color: white;
       }
     }
 
