--- a/src/style.scss
+++ b/src/style.scss
@@ -5,3 +5,5 @@
 @import "../src/style/productDetail/productDetail.scss";
 @import "../src/style/cart/cart.scss";
 @import "../src/style/cartCard/cartCard.scss";
+@import "../src/style/cartSummary/cartSummary.scss";
+@import "../src/style/search/search.scss";
