--- a/src/style/cartCard/cartCard.scss
+++ b/src/style/cartCard/cartCard.scss
@@ -19,6 +19,38 @@
       width: 150px;
       text-align: center;
     }
+
+    &-price {
+      text-align: center;
+    }
+
+    &-subtotal {
+      text-align: center;
+    }
+
+    &-qty {
+      input {
+        width: 15%;
+        height: 25px;
+        padding: 5px 10px;
+        margin-left: 37%;
+        text-align: center;
+        border-radius: 6px;
+        &:focus {
+          border: none;
+        }
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+
+        /* Firefox */
+        &[type="number"] {
+          -moz-appearance: textfield;
+        }
+      }
+    }
     &-btn {
       border: none;
       background-color: transparent;
