--- a/src/style/cartCard/cartCard.scss
+++ b/src/style/cartCard/cartCard.scss
@@ -52,8 +52,9 @@
       }
     }
     &-btn {
-      border: none;
-      background-color: transparent;
+      height: 25px;
+      width: 30px;
+      padding-left: 60px;
     }
   }
 }
