--- a/src/style/cartSummary/cartSummary.scss
+++ b/src/style/cartSummary/cartSummary.scss
@@ -3,7 +3,48 @@
   background: #f4f4f4;
   padding-left: 20px;
   padding-right: 20px;
+  height: auto;
   h4 {
     font-weight: 1000;
+    margin: 10px;
+  }
+  &-countrydropdown {
+    &-select {
+      margin-left: 10px;
+      height: 25px;
+      width: 150px;
+    }
+  }
+  &-state {
+    &-select {
+      margin-left: 10px;
+      height: 25px;
+      width: 150px;
+    }
+  }
+  &-zip {
+    &-code {
+      margin-left: 10px;
+      height: 20px;
+      width: 150px;
+    }
+    padding-bottom: 10px;
+  }
+  &-grandtotal {
+    margin-left: 10px;
+    height: 25px;
+    width: 150px;
+    display: flex;
+
+    h6 {
+      margin: 0px;
+      font-size: 15px;
+    }
+    p {
+      padding-left: 10px;
+      margin: 0px;
+      font-weight: 500;
+    }
+    padding-bottom: 10px;
   }
 }
