--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,7 @@
 @import "../src/style/cartCard/cartCard.scss";
 @import "../src/style/cartSummary/cartSummary.scss";
 @import "../src/style/search/search.scss";
+@import "../src/style/shippingPage/shippingPage.scss";
+@import "../src/style/addressform/addressform.scss";
+@import "../src/style/orderSummary/orderSummary.scss";
+@import "../src/style/pickupForm/pickupForm.scss";
