--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -21,7 +21,7 @@ h1 {
 }
 
 .active {
-  background-color: rgb(46, 44, 44) !important;
-  color: aliceblue;
+  background-color: #f83b3b !important;
+  color: white !important;
   border: 1px solid green;
 }
