--- a/src/style/header/header.scss
+++ b/src/style/header/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: grey;
+  background-color: rgb(43, 40, 40);
   color: aliceblue;
   padding: 5px 20px;
   height: 100px;
