--- a/src/style.scss
+++ b/src/style.scss
@@ -11,3 +11,6 @@
 @import "../src/style/addressform/addressform.scss";
 @import "../src/style/orderSummary/orderSummary.scss";
 @import "../src/style/pickupForm/pickupForm.scss";
+@import "../src/style/paymentPage/paymentPage.scss";
+@import "../src/style/minicart/minicart.scss";
+@import "../src/style/minicartCard/minicartCard.scss";
