--- a/src/style/pickupForm/pickupForm.scss
+++ b/src/style/pickupForm/pickupForm.scss
@@ -1,8 +1,8 @@
 .pickup {
   border: 1px solid #cdcdcd;
-  width: 640px;
-  height: auto;
-  padding: 30px;
+  width: 700px;
+  height: 200px;
+  padding: 30px 30px;
 
   p {
     margin: 0px;
