--- a/src/style/search/search.scss
+++ b/src/style/search/search.scss
@@ -1,6 +1,9 @@
 .search {
   padding-top: 10px;
   z-index: 1;
+  margin: 0px;
+  padding: 0px;
+  margin-right: 0px;
 
   &-content {
     display: flex;
