--- a/src/style/cart/cart.scss
+++ b/src/style/cart/cart.scss
@@ -12,7 +12,7 @@
       padding-right: 5.5%;
       padding-top: 15px;
       button {
-        background: grey;
+        background-color: rgb(248, 59, 59);
         border-radius: 8px;
         height: 30px;
         width: 80px;
@@ -26,7 +26,7 @@
       width: 100%;
 
       &-head {
-        background-color: grey;
+        background-color: rgb(248, 59, 59);
         color: white;
 
         tr {
