--- a/src/style/cartSummary/cartSummary.scss
+++ b/src/style/cartSummary/cartSummary.scss
@@ -1,9 +1,10 @@
 .cartsummary {
   border: 1px solid #e5e5e5;
-  background: #f4f4f4;
+  background: #f0eded;
   padding-left: 20px;
   padding-right: 20px;
-  height: auto;
+  height: 100%;
+  width: 250px;
   h4 {
     font-weight: 1000;
     margin: 10px;
@@ -31,11 +32,20 @@
     padding-bottom: 10px;
   }
   &-grandtotal {
-    margin-left: 10px;
-    height: 25px;
-    width: 150px;
-    display: flex;
-
+    &-btn {
+      margin-left: 10px;
+      button {
+        margin-top: 10px;
+        width: 100%;
+        height: 40px;
+        background-color: rgb(248, 59, 59);
+        border: none;
+        color: white;
+        font-weight: bold;
+        font-size: 15px;
+        text-transform: uppercase;
+      }
+    }
     h6 {
       margin: 0px;
       font-size: 15px;
