--- a/src/style/layeredNavigation/layeredNavigation.scss
+++ b/src/style/layeredNavigation/layeredNavigation.scss
@@ -1,4 +1,27 @@
-.layered-navigation {
-  width: 100%;
-  padding-right: 10px;
+.layeredNavigation {
+  width: 250px;
+  height: 450px;
+  padding: 20px 20px;
+  border: 1px solid #cdcdcd;
+
+  &-accordion {
+    background-color: #eee;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+
+    &:hover {
+      background-color: #ccc;
+    }
+  }
+
+  &-filter {
+    padding: 0 18px;
+    background-color: white;
+  }
 }
