--- a/src/style/productCard/productCard.scss
+++ b/src/style/productCard/productCard.scss
@@ -1,6 +1,6 @@
 .product-card {
-  height: 500px;
-  width: 310px;
+  height: 300px;
+  width: 18%;
   padding: 20px 0px;
   position: relative;
 
@@ -11,8 +11,8 @@
   // }
 
   &-image {
-    height: 73%;
-    width: 100%;
+    height: 60%;
+    // width: 250px;
 
     img {
       height: 100%;
@@ -28,6 +28,7 @@
       text-align: center;
       display: flex;
       flex-direction: column;
+      font-size: 14px;
 
       a {
         text-decoration: none;
@@ -60,7 +61,6 @@
         height: 36px;
         margin-right: 10px;
         border: 1px solid #000;
-        padding: 0px 10px;
         margin-left: 20px;
         border-radius: 4px;
         button {
@@ -98,7 +98,7 @@
         border-radius: 4px;
         border: 1px solid grey;
         color: grey;
-        width: 55%;
+        width: 49%;
         cursor: pointer;
         &:disabled {
           cursor: not-allowed;
