--- a/src/style/productList/productList.scss
+++ b/src/style/productList/productList.scss
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: space-between;
   padding-top: 30px;
-  padding-left: 20px;
+  margin-left: 20px;
   padding-right: 20px;
 }
