--- a/src/style/productList/productList.scss
+++ b/src/style/productList/productList.scss
@@ -1,6 +1,6 @@
-.product-list {
+.productlist {
   display: flex;
-  justify-content: space-between;
+  gap: 30px;
   padding-top: 30px;
   margin-left: 20px;
   padding-right: 20px;
