--- a/src/style/layeredNavigation/layeredNavigation.scss
+++ b/src/style/layeredNavigation/layeredNavigation.scss
@@ -20,8 +20,67 @@
     }
   }
 
+  &-accordionSelected {
+    display: flex;
+    flex-direction: column;
+
+    margin-bottom: 10px;
+
+    &-clearAll {
+      cursor: pointer;
+      margin-right: 0px;
+      color: grey;
+      border: 1px solid grey;
+      padding: 4px;
+      height: 30px;
+      width: 80px;
+      background-color: transparent;
+      &:hover {
+        background-color: rgb(248, 59, 59);
+        border: 1px solid rgb(248, 59, 59);
+        color: white;
+      }
+    }
+
+    &-displaySection {
+      display: flex;
+      justify-content: space-between;
+      text-align: center;
+      padding: 4px;
+      color: grey;
+      border: 1px solid grey;
+      width: 100%;
+      word-wrap: break-word;
+      height: 20px;
+      margin-bottom: 10px;
+      &-option {
+        display: flex;
+        justify-content: space-between;
+      }
+      &-cancel {
+        text-align: center;
+        border: none;
+        font-size: 15px;
+        transition: 0.4s;
+
+        cursor: pointer;
+
+        color: #ccc;
+
+        background-color: transparent;
+        &:hover {
+          background-color: rgb(248, 59, 59);
+          color: white;
+        }
+      }
+    }
+  }
+
   &-filter {
     padding: 0 18px;
     background-color: white;
   }
+}
+.separator {
+  flex-grow: 1;
 }
